--- a/application/views/payment_options.htm
+++ b/application/views/payment_options.htm
@@ -49,55 +49,55 @@
 
             <div class="card-content card-content-2">
                <div class="fab fa-cc-amex"></div>
-               <h2>
+               <h3>
                   American Express
-               </h2>
+               </h3>
                <p>
                   Don't Leave Home Without Them
                </p>
-               <a href="#">Pay with AmEx</a>
+               <a href="#">Pay with<br>AmEx</a>
             </div>
 
             <div class="card-content card-content-2">
                <div class="fab fa-cc-discover"></div>
-               <h2>
+               <h3>
                   Discover
-               </h2>
+               </h3>
                <p>
                   It pays to Discover
                </p>
-               <a href="#">Pay with Discord</a>
+               <a href="#">Pay with<br>Discord</a>
             </div>
 
             <div class="card-content card-content-2">
                <div class="fab fa-cc-visa"></div>
-               <h2>
+               <h3>
                   Visa
-               </h2>
+               </h3>
                <p>
                   Trust, Security, Acceptance, and Inclusion.
                </p>
-               <a href="#">Pay with Visa</a>
+               <a href="#">Pay with<br>Visa</a>
             </div>
             <div class="card-content card-content-2">
                <div class="fab fa-cc-mastercard"></div>
-               <h2>
+               <h3>
                   Mastercard
-               </h2>
+               </h3>
                <p>
                   There are some things money can't buy. For everything else there's Mastercard.
                </p>
-               <a href="#">Pay with Mastercard</a>
+               <a href="#">Pay with<br>Mastercard</a>
             </div>
             <div class="card-content card-content-2">
                <div class="fab fa-cc-paypal"></div>
-               <h2>
+               <h3>
                   PAYPAL
-               </h2>
+               </h3>
                <p>
                   We put people at the center of everything we do.
                </p>
-               <a href="#">Pay with Paypal</a>
+               <a href="#">Pay with<br>Paypal</a>
             </div>
          </div>
       </div>
@@ -135,8 +135,9 @@
   margin: 0 auto;
   text-align: center;
   padding: 30px;
+  border-style: solid;  
 }
-.payment-cards h2.header{
+.payment-cards h3.header{
   font-size: 40px;
   margin: 0 0 30px 0;
   text-transform: uppercase;
@@ -149,18 +150,20 @@
 .card-content{
   display: flex;
   flex-wrap: wrap;
-  flex: 1;
+  flex: 1 1 50%;
+  /*flex: 1 0 5%;*/
+  /*flex-shrink: 3*/
   margin: 20px;
   padding: 20px;
   border: 2px solid black;
   border-radius: 4px;
   transition: all .3s ease;
-  /*width: 400px;*/
+  width: 250px;
   height: 400px;
 
 }
 .card-content .fab{
-  font-size: 70px;
+  font-size: 90px;
   margin: 16px 0;
 }
 .card-content > *{
@@ -201,7 +204,7 @@
   text-transform: uppercase;
 }
 .card-content p{
-  font-size: 17px;
+  font-size: 12px;
   font-family: 'Poppins',sans-serif;
 
 }
@@ -212,16 +215,17 @@
   text-decoration: none;
   text-transform: uppercase;
   border: 1px solid black;
-  padding: 15px 0;
+  padding: 5px 0;
   border-radius: 25px;
   transition: .3s ease;
 }
 .card-content a:hover{
   border-radius: 4px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1500px) {
   .card-services{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
   }
 }
